test/library/standard/List/init/listInitUnboundedRange.good
listInitUnboundedRange.chpl:7: error: Cannot init list from unbounded range: range(int(64),boundedLow,false)
