test/library/standard/List/init/listInitUnboundedRange.chpl
private use List;

config const testIters = 8;

const r = 1..;

var lst = new list(r);

